# paracom

./: README.md  README_ja-JP.md  pyproject.toml
samples/: sample1-e.txt  sample1-j.txt
src/paracom/: __init__.py  paracom.py
src/pilcrow/: __init__.py  pilcrow.py
